--- a/frontend/src/app/pages/auth/auth.component.scss
+++ b/frontend/src/app/pages/auth/auth.component.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;&display=swap");
 
 * {
   margin: 0;
@@ -11,13 +11,13 @@
   position: relative;
   max-width: 850px;
   width: 100%;
-  margin: auto;
   padding: 40px 30px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   perspective: 500px;
   height: 70%;
   background-color: black;
 }
+
 .container .cover {
   position: absolute;
   top: 0;
@@ -29,9 +29,11 @@
   transform-origin: left;
   transform-style: preserve-3d;
 }
-.container.rotate-active {
+
+.container .rotate-active {
   transform: rotateY(-180deg);
 }
+
 .container .cover .front,
 .container .cover .back {
   position: absolute;
@@ -41,6 +43,7 @@
   width: 100%;
   backface-visibility: hidden;
 }
+
 .cover .back {
   transform: rotateY(180deg);
   backface-visibility: hidden;
@@ -52,12 +55,12 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background: #7d2ae8;
+  background-color: black;
   opacity: 0.5;
   z-index: 12;
 }
 
-.container .cover::after {
+.container .cover ::after {
   opacity: 0.3;
   transform: rotateY(180deg);
   backface-visibility: hidden;
@@ -84,7 +87,7 @@
 
 .cover .text .text-1,
 .cover .text .text-2 {
-  font-size: 23px;
+  font-size: 26px;
   font-weight: 600;
   color: #fff;
   text-align: center;
