--- a/frontend/src/app/pages/auth/auth.component.html
+++ b/frontend/src/app/pages/auth/auth.component.html
@@ -92,7 +92,7 @@
                 <mat-label class="text-gray-200">Email</mat-label>
                 <input
                   matInput
-                  placeholder="abc@xyz.com"
+                  placeholder="email@email.com"
                   formControlName="email"
                   class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
                 />
